paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c3/sample_004/target.compile.log
error[E0308]: mismatched types
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c3/sample_004/target.rs:104:14
    |
104 |     if vf == vf0 {
    |              ^^^ expected `Pointer<()>`, found `Pointer<fn(i32) -> i32>`
    |
    = note: expected struct `Pointer<()>`
               found struct `Pointer<fn(i32) -> i32>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.